# trie

./: .gitignore  CMakeLists.txt  README.md
benchmark/: static_trie.cpp  static_trie_big.cpp  static_trie_constexpr_small.cpp  static_trie_medium.cpp  static_trie_small.cpp  trie.cpp  trie_big.cpp  trie_medium.cpp  trie_small.cpp
benchmark/py/: data.py  graph.py  predicates.py
benchmark/static_trie/: static_trie_big.cpp  static_trie_medium.cpp
benchmark/static_trie_constexpr/: static_trie_constexpr_big.cpp  static_trie_constexpr_medium.cpp
benchmark/trie/: trie_medium.cpp
src/: demo.cpp  prefix_tree.hpp  static_demo.cpp  static_trie.hpp  static_trie_view.hpp  trie.hpp
src/static_trie/: static_stack.hpp  static_trie.hpp  static_trie_helper.hpp  static_trie_helpers.hpp  static_trie_types.hpp  static_vector.hpp
src/trie/: static_trie.hpp  trie.hpp
src/trie/auxiliary/: concepts.hpp  functions.hpp  helpers.hpp  types.hpp
src/trie/auxiliary/data_structures/: static_stack.hpp  static_vector.hpp
test/: static_trie_test.cpp  test.cpp  trie_test.cpp
test/auxiliary/: concepts.cpp  functions.cpp  helpers.cpp
test/auxiliary/data_structures/: static_stack_test.cpp  static_vector_test.cpp
test/static_trie/: static_stack_test.cpp  static_trie_helpers_test.cpp
